--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,14 @@ html {
   --textColor: var(--grey-900);
   --darkModeTransition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --textColor: var(--dark-mode-text-color);
+    --backgroundColor: var(--dark-mode-bg-color);
+  }
+}
+
 .dark-theme {
   --textColor: var(--dark-mode-text-color);
   --backgroundColor: var(--dark-mode-bg-color);
